plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'my.abdrus'
version = '0.0.1'
description = 'Бот для управления приложением с гонками смайлов в телеграм.'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.telegram:telegrambots-spring-boot-starter:6.9.7.1'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    implementation 'org.json:json:20251224'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.apache.poi:poi-ooxml:5.4.1'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    runtimeOnly 'org.postgresql:postgresql'
}
